fixing horizontal scrolling for piechart

--- a/careertrack-frontend/style.css
+++ b/careertrack-frontend/style.css
@@ -3,7 +3,7 @@
 }
 
 html, body {
-  overflow-x: hidden;
+  overflow-x: auto;
 }
 button, .card {
   transition: all 0.2s ease-in-out;
